# cffi-explore

./: .gitignore  Cargo.toml  README.md  build.rs
libdummy/: CMakeLists.txt  MyLibrary.cpp  MyLibrary.h  README.md  internal.cpp  internal.h  lib.cpp  lib.h
notes/: fatptr_through_ffi.md  free_mem.md  threading.md
src/: lib.rs  main.rs  my_lib_errors.rs
tests/: send_inline.rs  start_lib.rs  utils.rs
