[package]
name = "cffi-explore"
version = "0.1.0"
authors = ["Jose Acevedo <acevedoflores.jose@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
log="0.4.14"
env_logger = "0.8.3"

[features]
# This flag is used to make the exposed 'LibDummy' thread safe by introducing static mut checks performed
# at start and at shutdown.
# I maninly added this flag as an excuse to see conditional compilation in action and make valgrind report
# no memory leaks. If this flag is turned on valgrind will report two allocations not properly freed (the two statics)
with_lib_checks=[]